--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@ currently studying in Marian College Kuttikkanam.
 <section class="testimonials section-bg">
   <div class="container" data-aos="fade-up">
     <div class="section-title" style="text-align: left;">
-      <p></p><b>ACTIVITIES</b></p>
+      <p><b>ACTIVITIES</b></p>
     </div>
     <div class="swiper activity-swiper">
       <div class="swiper-wrapper">
